--- a/app/templates/panel.html
+++ b/app/templates/panel.html
@@ -5,15 +5,15 @@
 				NewBis
 			</h2>
 			<p>
-				NewBis是一款根据开源项目组成的监控系统，根据数据库来绘制图表。
+				这里是简介。
 			</p>
 		</div>
 		<div class="col-md-6 column">
 			<h2>
-                用到的工具
+                自定义内容
 			</h2>
 			<p>
-				使用Python+flask作为后台；jQuery+highcharts绘图；bootstrap v3做前端框架,Mysql做存储。
+				自定内容。
 			</p>
 		</div>
 	</div>
